# PreplyClass

./: .env.example  .gitignore  README.md  pyproject.toml
agno-tavily-lecture/: .env.example  .gitignore  README.md  agents.py  company_profile.md  config.py  main.py  models.py  queries.txt  report.py  requirements.txt
notebooks/: rag-chunking-embeddings-lecture.ipynb  rag-pdf-extraction-lecture.ipynb  rag-vector-store-lecture.ipynb
scripts/: build_extraction_notebook.py  build_transformation_notebook.py  build_vector_store_notebook.py
