[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for PDF documents with table, image, and text extraction"
requires-python = ">=3.10"
authors = [{name = "Steven", email = "steven@example.com"}]
license = {text = "MIT"}

dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.0.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pdf-comments-extractor>=0.1.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "anthropic>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
vector-db = [
    "pinecone-client>=3.0.0",
    "weaviate-client>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
